--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -6,8 +6,6 @@
     <title>Clasificación de los minipigs </title>
 </head>
 <body>
-
-</body>
 <h1>Mini pigs</h1>
     <h2>
    <p>Los minipigs, también conocidos como cerdos enanos o cerdos miniatura, son una variedad de cerdos domésticos criados selectivamente para alcanzar un tamaño más pequeño que los cerdos convencionales. A pesar de su nombre, pueden variar considerablemente en tamaño y características
@@ -22,21 +20,31 @@
              <li>Categoría 3: Entre 40,6 y 45,7 cm de altura.</li>
              <li>Categoría 4: Entre 45,7 y 50,8 cm de altura.</li>
         </ul>
+        <p></p>
         <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*5P1HsRTI462pPmbnGtxS-g.jpeg" alt="Comparación en tamaño de diferentes razas de mini pigs">
         <p></p>
             <li>Clasificación por Raza:</li>
         </ol>
         <p>Existen alrededor de 14 razas reconocidas como minipigs, cada una con características propias. Algunas de las razas más populares incluyen:</p>
         <ul>
-            <li>Juliana: Conocida por su pequeño tamaño y pelaje denso.</li>
-            <li>Göttingen: Desarrollada en Alemania para investigación médica</li>
-            <li>Yucatán: Originaria de la península de Yucatán, con un pelaje áspero y orejas erectas.</li>
-            <li>Vietnamita: También conocido como "potbelly", con un cuerpo más redondo y un hocico chato.</li>
-            <li>Kunekune: Raza neozelandesa con un pelaje abundante y una cola enroscada.</li>
+            <li>
+                <a href="/Paginas/Juliana.html"> Juliana</a> 
+                Conocida por su pequeño tamaño y pelaje denso.</li>
+            <li>
+                <a href="/Paginas/Göttingen.html"> Göttingen</a> 
+                Desarrollada en Alemania para investigación médica</li>
+            <li><a href="/Paginas/Yucatan.html">Yucatán</a> 
+                Originaria de la península de Yucatán, con un pelaje áspero y orejas erectas.</li>
+            <li><a href="/Paginas/Vietnamita.html">Vietnamita</a> 
+                También conocido como "potbelly", con un cuerpo más redondo y un hocico chato.</li>
+            <li><a href="/Paginas/Kunekune.html">Kunekune</a> 
+                Raza neozelandesa con un pelaje abundante y una cola enroscada.</li>
         </ul>
     </h2>
-    <h3>
-        <a href="https://americanminipigassociation.com/"> Más información sobre minipigs</a>
-    </h3>
-
+    <h5>
+        <footer>
+            <a href="https://americanminipigassociation.com/"> Más información sobre minipigs</a>
+        </footer>
+    </h5>
+</body>
 </html>
